--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ section {
   z-index: 2;
   overflow: hidden;
 }
+
 h1, h2, h3 {
   font-family: "rama-gothic-m", sans-serif;
   color: rgb(253, 54, 40);
@@ -130,7 +131,11 @@ h1{
 }
 
 h2{
-  font-size: 30px;
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 35px;
 }
 
 .underline-animation{
@@ -158,6 +163,49 @@ h2{
   transform-origin: bottom left;
 }
 
+@media (max-width: 1024px) {
+  section{
+    flex-direction: column;
+  }
+
+  .left-top, .right-bottom{
+    width: 100%;
+  }
+
+  h1{
+    font-size: 40px;
+  }
+
+  h2{
+    font-size: 7vw;
+  }
+
+  .logo{
+    height: 6em;
+    padding-left: 5%;
+  }
+}
+
+@media (max-width: 768px) {
+  h1{
+    font-size: 10vw;
+  }
+
+  h2{
+    font-size: 10vw;
+  }
+
+  .logo{
+    height: 20vw;
+    padding-left: 5%;
+  }
+
+  p{
+    font-size: 3.5vw;
+  }
+  
+}
+
 /* HOME PAGE */
 .home section{
   height: 100vh;
@@ -183,11 +231,6 @@ h2{
 .team .left-top :is(p, h2) {
   margin-left: 5%;
   width: 60%;
-}
-
-.home-page .btn{
-  margin-top:3%;
-  margin-left: 5%;
 }
 
 .our-mission .btn{
@@ -229,7 +272,7 @@ h2{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25%;
+  width: 100%;
   height: 90vh;
   border: 1px solid green;
   margin-left: auto;
@@ -277,99 +320,128 @@ h2{
   align-items: center;
 }
 
+@media (max-width: 1024px) {
+  .home-page .logo{
+    margin-left: 0;
+  }
+  
+  .home-page .right-bottom{
+    padding-left: 0;
+  }
+  
+  .home-page .right-bottom :is(p, h1){
+    margin-left: 9%;
+    width: 70%;
+  }
+   
+  .home-page {
+    flex-direction: row;
 
+  }
 
+  .home-page .left-top {
+    width: 50%;
+  }
+  
+  .home-page .right-bottom {
+    width: 50%;
+  }
+  
+  .our-mission .left-top :is(p, h2),
+  .ways-help .left-top :is(p, h2),
+  .team .left-top :is(p, h2) {
+    width: 80%;
+  }
+
+  .ways-help .right-bottom div{
+    height: 50vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .home-page .left-top {
+    display: none;
+  }
+
+  .home-page .right-bottom {
+    width: 100%;
+  }
+
+}
 /* HOME PAGE ENDS */
 
 /* ABOUT PAGE */
 
 .about {
-  margin-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-
-.team .left-top{
-
-  
-  background-color: aqua;
-}
-
- .ceo .right-bottom {
-  display: flex;
-  flex-direction: column;
+.team {
+  background-color: #027593;
   justify-content: center;
-}
-
-.team-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  height: 100%;
-  width: 100%;
-  }
-
-  .team-grid img{
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-  }
-  
-  
-  .div1 { grid-area: 1 / 1 / 2 / 2; }
-  .div2 { grid-area: 1 / 2 / 2 / 3; }
-  .div3 { grid-area: 1 / 3 / 2 / 4; }
-  .div4 { grid-area: 2 / 1 / 3 / 2; }
-  .div5 { grid-area: 2 / 2 / 3 / 3; }
-  .div6 { grid-area: 2 / 3 / 3 / 4; }
-  .div7 { grid-area: 3 / 1 / 4 / 2; }
-
-
-.about-mission .right-bottom, .about-mission .left-top{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  max-width: 100vw; 
+  max-height: 100vh; 
+  grid-template-columns: repeat(3, 30vh);
+  grid-template-rows: repeat(3, 30vh);
 }
 
-.about-mission .right-bottom div{
-  height: 100%;
-  width: 40%;
+  
+.team .div1 { grid-area: 1 / 1 / 2 / 2; }
+.team .div2 { grid-area: 2 / 1 / 3 / 2; }
+.team .div3 { grid-area: 3 / 1 / 4 / 2; }
+.team .div4 { grid-area: 1 / 3 / 2 / 4; }
+.team .div5 { grid-area: 2 / 3 / 3 / 4; }
+.team .div6 { grid-area: 3 / 3 / 4 / 4; }
+
+.team .div7 { 
+  grid-area: 1 / 2 / 4 / 3; 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  border: 1px solid black;
+  height: 100%;
+  padding-top: 20vh;
+  z-index: -1;
+  background-color: white;
 }
 
-.about-mission .left-top{
-  flex-direction: column;
+.team .div7 p{
+  padding-left: 20%;
+  padding-right: 20%;
+
 }
 
-.about-mission .right-bottom{
-   height: 50%;
+.team .div8 { 
+  grid-area: 3 / 2 / 4 / 3; 
+  background-color: white; 
+
+}
+
+
+.team img{
+  height: 100%;
+  width: 100%;
 }
 
 .about-mission {
   flex-direction: column;
 }
 
-.about .donate {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40vh
+.about-mission .left-top p, .ceo p{
+  width: 60%;
 }
 
-
+.about-mission .left-top, .about .donate{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 7%;
+  width: 100%;
+}
 
 .about .photo-slider{
   height: 300px;
@@ -398,16 +470,77 @@ h2{
   padding: 2px;
 }
 
-
 .about .slide div {
   top: 10%;      
+}
+
+.about .donate{
+  background-color: #027593;
+  height: 30vh;
+}
+
+.about .donate h1{
+  color: white;
+}
+
+.ceo .left-top, .ceo .right-bottom{
+  width: 50vw;
+}
+
+.ceo .right-bottom{
+  margin-left: 100px;
+}
+
+.ceo img{
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 1024px) {
+  .team {
+    margin-top: 70px;
+    grid-template-columns: repeat(3, 20vh);
+    grid-template-rows: repeat(3, 30vh);
+    grid-column-gap: 3vw;
+    grid-row-gap: 0;
+  }
+
+  .team .div7 h2, .ceo h2, .about-mission h2{
+    font-size: 5vh;
+  }
+  
+  .team .div7 p, .ceo p{
+    font-size: 10px;  
+  }
+  
+  .ceo {
+    flex-direction: row;
+  }  
+}
+
+@media (max-width: 768px) {
+  .team .div7 p, .ceo p{
+    font-size: 15px;
+  }
+  
+  .about-mission p{
+    font-size: 17px;
+  }
+
+  .ceo{
+    flex-direction: column;
+  }
+
+  .ceo .left-top, .ceo .right-bottom{
+    width: 100%;
+  }
+
 }
 
 
 /* ABOUT PAGE ENDS */
 
 /*DONATE PAGE*/
-
 
 /* NAVBAR */
 .overlay {
@@ -529,4 +662,4 @@ h2{
   }
 
 }
-
+/* NAVBAR ENDS HERE*/
