--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@ section a {
   font-family: inherit;
   padding: 0.35em;
   padding-left: 1.2em;
-  font-size: 14px;
+  font-size: 1em;
   font-weight: 500;
   border-radius: 7px;
   border: none;
@@ -303,19 +303,25 @@ section a:active .icon {
 }
 
 h1{
-  font-size: 60px;
+  font-size: 3em;
 }
 
 h2{
-  font-size: 50px;
+  font-size: 2.5em;
 }
 
 h3 {
-  font-size: 35px;
+  font-size: 1.5em;
+  letter-spacing: 0.03em;
 }
 
 a {
   text-decoration: none;
+  font-size: 1em;
+}
+
+li {
+  font-size: 0.85em;
 }
 
 .underline-animation{
@@ -352,42 +358,14 @@ a {
     width: 100%;
   }
 
-  h1{
-    font-size: 40px;
-  }
-
-  h2{
-    font-size: 7vw;
-  }
-
   .logo{
     height: 6em;
     padding-left: 5%;
   }
 }
 
-@media (max-width: 768px) {
-  h1{
-    font-size: 10vw;
-  }
-
-  h2{
-    font-size: 10vw;
-  }
-
-  .logo{
-    height: 20vw;
-    padding-left: 5%;
-  }
-
-  p{
-    font-size: 3.5vw;
-  }
-  
-}
-
 /* HOME PAGE */
-.home section{
+.home-page, .our-mission, .testimonials, .call-to-action, .ways-help{
   height: 100vh;
 }
 
@@ -429,7 +407,7 @@ a {
 
 .our-mission .left-top{
   justify-content: start;
-  padding-top: 20%;
+  padding-top: 30%;
 }
 
 .our-mission .left-top button{
@@ -506,17 +484,12 @@ a {
   transition: opacity 400ms ease;
   opacity: 1;  
   color: white;
-  font-size: 30px;  
 }
 
 .ways-help .right-bottom div:hover h3,
 .donate-info .right-bottom div:hover h3,
 .impact-volunteer .right-bottom div:hover h3 {
   opacity: 0;
-}
-
-.testimonials{
-  height: 60vh;
 }
 
 .testimonals .slide-track{
@@ -534,7 +507,7 @@ a {
   padding: 0;
   font-family: "rama-gothic-m";
   letter-spacing: 1px;
-  font-size: 24px;
+  font-size: 1.25em;
 }
 
 .testimonials .slide img{
@@ -600,7 +573,6 @@ a {
 
 .call-to-action .next-to-each-other a{
   width: 5em;
-  font-size: 1em;
 }
 
 .our-mission .accomplishments {
@@ -608,15 +580,30 @@ a {
   color: white;
 }
 
-#second-p{
+#second-p, #second{
   display: none;
 }
 
+
+#icon-talk{ 
+  width: 15em; 
+  height: 14em; 
+}
+
 @media (max-width: 1024px) {
-  .home section, .volunteer section, .donate section{
+  .our-mission, .testimonials, .get-involved, .ways-help{
+    height: auto;
+  }
+
+  p{
+    font-size: 0.8em;
+  }
+
+  .home-page, .team, .donate-home, .volunteer-home, .projects-home{
     margin-left: 0;
     margin-top: 70px;
   }
+
   .home-page .logo{
     margin-left: 0;
   }
@@ -651,6 +638,11 @@ a {
     width: 80%;
   }
 
+  .our-mission .left-top, .our-mission .right-bottom, .ways-help .left-top, 
+  .team .left-top, .donate-info .left-top, .impact-volunteer .left-top {
+    height: auto;
+   }
+
   .ways-help .right-bottom div, .donate-info .right-bottom div, .impact-volunteer .right-bottom div{
     height: 100%;
   }
@@ -663,7 +655,7 @@ a {
     flex-direction: column;
   }
   
-  .our-mission a{
+  .our-mission a, .ways-help a{
     width: 6em;
     font-size: 0.65em;
   }
@@ -672,9 +664,9 @@ a {
     margin-bottom: 0;
   }
 
-  .our-mission .end{
+  .our-mission .end, .ways-help .end{
     width: 76%;
-    margin-bottom: 10%;
+    margin-bottom: 5em;
   }
 
   .our-mission .description :is(h3, h2, p){
@@ -689,7 +681,6 @@ a {
     width: 70%;
   }
 
-
   .testimonials .slide {
     height: 40%;
   }
@@ -698,9 +689,61 @@ a {
   .volunteer-home .slide-track:hover, .volunteer-home .slide-track .slide:focus{
     animation-play-state:running;
   }
+
+  .testimonials .slide-track:hover{
+    animation-play-state: paused;
+  }
+
+  #second{
+    display: flex;
+  }
+
+  #first, .ways-help .right-bottom{
+    display: none;
+  }
+
+  .ways-help .left-top, .testimonials, .call-to-action {
+    padding-top: 7%;
+    padding-bottom: 7%;
+  }
+
+  .extra .image-slider{
+    height: 40vh;
+    object-fit: contain;
+  }
+
+  .extra .image-slider img{
+     width: 100%;
+  }
+
+  .logo{
+    height: 5em;
+  }
+  
+  h1{ 
+    font-size: 2.5em;
+  }    
+ 
+  .call-to-action .next-to-each-other a {
+    width: 5em;
+    font-size: 0.75em;
+    margin-top: 3em;
+  }
 }
 
 @media (max-width: 768px) {
+  .call-to-action .next-to-each-other a {
+    margin-top: 0;
+  }
+
+  .logo{
+    height: 4.5em;
+  }
+
+  h1, h2{ 
+    font-size: 2em;
+  }
+
   .home-page .left-top {
     display: none;
   }
@@ -723,6 +766,11 @@ a {
   
   .call-to-action .next-to-each-other{
     margin-top: 10%;
+  }
+
+  #icon-talk{ 
+    width: 10em; 
+    height: 10em; 
   }
 }
 
@@ -855,14 +903,6 @@ a {
     grid-column-gap: 3vw;
     grid-row-gap: 0;
   }
-
-  .team .div7 h2, .ceo h2, .about-mission h2, .donate-home h2{
-    font-size: 5vh;
-  }
-  
-  .team .div7 p, .ceo p, .donate-home p{
-    font-size: 10px;  
-  }
   
   .ceo, .donate-home {
     flex-direction: row;
@@ -870,14 +910,6 @@ a {
 }
 
 @media (max-width: 768px) {
-  .team .div7 p, .ceo p, .donate-home p{
-    font-size: 15px;
-  }
-  
-  .about-mission p{
-    font-size: 17px;
-  }
-
   .ceo, .donate-home{
     flex-direction: column;
   }
