--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,10 @@ li {
   font-size: 0.85em;
 }
 
+p {
+  font-size: 1em;
+}
+
 .underline-animation{
   display: inline-block;
   position: relative;
@@ -427,7 +431,7 @@ li {
 }
 
 .our-mission .left-top, .our-mission .right-bottom, 
-.ways-help .left-top, .team .left-top, .donate-info .left-top, .impact-volunteer .left-top{
+.ways-help .left-top, .donate-info .left-top, .impact-volunteer .left-top{
   height: 100%;
 }
 
@@ -436,7 +440,7 @@ li {
 }
 
 .our-mission .right-bottom :is(h2, h3, p),
-.ways-help .left-top :is(h2, h3, p) {
+.ways-help .left-top :is(h2, h3, p), .ways-help li {
   color: white;
 }
 
@@ -459,8 +463,7 @@ li {
 }
 
 .ways-help .right-bottom div::before,
-.donate-info .right-bottom div::before, 
-.impact-volunteer .right-bottom div::before {
+.donate-info .right-bottom div::before {
   content: '';
   position: absolute;
   top: 0;
@@ -493,46 +496,48 @@ li {
 }
 
 .testimonals .slide-track{
-  width: calc(250px * 8);
+  width: calc(250px * 9);
   animation: scroll8 40s linear infinite;
 }
 
 .testimonials p{
-  width: 100%;
+  width: 90%;
+  color: white;
 } 
 
 .testimonials h4{
   margin: 0;
   margin-top: 5%;
-  padding: 0;
-  font-family: "rama-gothic-m";
-  letter-spacing: 1px;
+  padding: 2%;
   font-size: 1.25em;
+  width: 90%;
 }
 
 .testimonials .slide img{
-  height: 30vh;
+  height: 20vh;
   object-fit:cover;
 }
 
 .testimonials .slide  #alessandra, .testimonials .slide  #helaine{
   object-position: top; /* Aligns the top of the image with the top of the container */
-
 }
 
 .testimonials .slide {
   margin-left: 0.5%;
   height: 50vh;
   padding-top: 20px;
-  border-radius: 7px;
+  border-radius: 1rem;
   flex-direction: column;
   justify-content: start;
   align-items: center;
   overflow: visible;
+  background-color: #027593;
+  border: 0.5px solid black;
+  color: white;
 }
 
 .testimonials .photo-slider{
-  height: auto;
+  height: auto; 
 }
 
 
@@ -632,7 +637,6 @@ li {
   
   .our-mission .left-top :is(p, h2),
   .ways-help .left-top :is(p, h2),
-  .team .left-top :is(p, h2),
   .donate-info .left-top :is(p, h2),
   .impact-volunteer .left-top :is(p, h2) {
     width: 80%;
@@ -691,10 +695,11 @@ li {
   }
 
   .testimonials .slide-track:hover{
-    animation-play-state: paused;
+    animation-play-state:paused;
   }
 
-  #second{
+
+   #second{
     display: flex;
   }
 
@@ -777,7 +782,6 @@ li {
 /* HOME PAGE ENDS */
 
 /* ABOUT PAGE */
-
 .about {
   display: flex;
   flex-direction: column;
@@ -787,52 +791,64 @@ li {
 
 .team {
   background-color: #027593;
-  justify-content: center;
-  display: grid;
-  max-height: 100vh; 
-  grid-template-columns: repeat(3, 30vh);
-  grid-template-rows: repeat(3, 30vh);
-}
-
-.team .div1 { grid-area: 1 / 1 / 2 / 2; }
-.team .div2 { grid-area: 2 / 1 / 3 / 2; }
-.team .div3 { grid-area: 3 / 1 / 4 / 2; }
-.team .div4 { grid-area: 1 / 3 / 2 / 4; }
-.team .div5 { grid-area: 2 / 3 / 3 / 4; }
-.team .div6 { grid-area: 3 / 3 / 4 / 4; }
-
-.team .div7 { 
-  grid-area: 1 / 2 / 4 / 3; 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  height: 100%;
-  padding-top: 20vh;
-  z-index: -1;
-  background-color: white;
-}
+  padding-bottom: 3em;
 
-.team .div7 p{
-  padding-left: 20%;
-  padding-right: 20%;
+  h2, p, h4{
+    color: white;
+  }
 
-}
-
-.team .div8 { 
-  grid-area: 3 / 2 / 4 / 3; 
-  background-color: white; 
+  h4 {
+    margin: 0;
+    width: 40%;
+    font-weight: normal;
+  }
 
 }
 
-.team img{
-  height: 100%;
-  width: 100%;
+.team .staff{
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  width:100%;
+  margin-left: 70px;
+
+  .div1 { grid-area: 1 / 1 / 2 / 2; }
+  .div2 { grid-area: 1 / 2 / 2 / 3; }
+  .div3 { grid-area: 1 / 3 / 2 / 4; }
+  .div4 { grid-area: 1 / 4 / 2 / 5; }
+  .div5 { grid-area: 1 / 5 / 2 / 6; }
+  .div6 { grid-area: 1 / 6 / 2 / 7; }
+  .div7 { grid-area: 1 / 7 / 2 / 8; }
+  .div8 { grid-area: 1 / 1 / 2 / 2; }
+  .div9 { grid-area: 1 / 2 / 2 / 3; }
+  .div10 { grid-area: 1 / 3 / 2 / 4; }
+  .div11 { grid-area: 1 / 4 / 2 / 5; }
+  .div12 { grid-area: 1 / 5 / 2 / 6; }
+  .div13 { grid-area: 1 / 6 / 2 / 7; }
+  .div14 { grid-area: 1 / 7 / 2 / 8; }
+
+  img{
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+  }
+  
+  div {
+    position: relative;
+    transition: 400ms ease;
+  }
+
 }
 
 .about-mission {
   flex-direction: column;
 }
 
+.ceo {
+ height:70vh;
+}
 .about-mission .left-top p, .ceo p, .donate-home p{
   width: 60%;
 }
@@ -854,6 +870,37 @@ li {
   animation: scroll-right 40s linear infinite;
 }
 
+.staff .hover-text {
+  display: flex;
+  position: absolute;
+  top: 0; /* Position from the top */
+  left: 0;
+  right: 0; /* Stretch to right edge */
+  bottom: 0; /* Stretch to bottom edge */
+  background-color: rgb(2,117,147, 0.75);
+  color: white;
+  padding: 5px;
+  /* For centering text */
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
+  transition: 400ms ease;
+  opacity: 0;
+}
+
+.staff div:hover .hover-text {
+  opacity: 1; /* Use flex for centering */
+}
+
+.staff {
+  h3, h5, h6{
+    margin: 0;
+  }
+
+  h3{
+   color: white;
+  }
+} 
 
 @keyframes scroll-right {
   0%{
@@ -892,18 +939,10 @@ li {
 
 .ceo img, .donate-home img{
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
-@media (max-width: 1024px) {
-  .team {
-    margin-top: 70px;
-    grid-template-columns: repeat(3, 20vh);
-    grid-template-rows: repeat(3, 30vh);
-    grid-column-gap: 3vw;
-    grid-row-gap: 0;
-  }
-  
+@media (max-width: 1024px) {  
   .ceo, .donate-home {
     flex-direction: row;
   }  
@@ -984,7 +1023,7 @@ li {
 }
 
 .volunteer-home .photo-slider{
-  height: 250px;
+  height: 25%;
 }
 
 .volunteer-home .slide:hover img{
@@ -993,7 +1032,38 @@ li {
 
 .impact-volunteer {
   margin-top: 7%;
+  margin-bottom: 7%;
+  
+  .right-bottom{
+    flex-direction: column;
+    align-items: start;
+
+    a {
+     background-color: transparent;
+     padding: 0;
+     box-shadow: none;
+     height: auto;
+    }
+
+    ul, li{ 
+      display: flex;
+      justify-content: start;
+      align-items: center;
+    }
+
+     li{ 
+      flex-direction: column;
+      width: 30%;
+      background-color: blue;
+    }
+  }
+
+  p{
+    width: 60%;
+  } 
 }
+
+
 /*VOLUNTEER PAGE ENDS*/
 
 @keyframes slide-right {
