Finishing up all the pages

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: start;
   flex-direction: row;
+  margin-top: 200px;
   margin-left: 70px;
   padding-bottom: 6%;
   padding-top: 6%;
