--- a/src/App.css
+++ b/src/App.css
@@ -830,7 +830,7 @@ p {
   .div14 { grid-area: 1 / 7 / 2 / 8; }
 
   img{
-    object-fit: contain;
+    object-fit: cover;
     height: 100%;
     width: 100%;
   }
@@ -849,6 +849,7 @@ p {
 .ceo {
  height:70vh;
 }
+
 .about-mission .left-top p, .ceo p, .donate-home p{
   width: 60%;
 }
@@ -945,7 +946,36 @@ p {
 @media (max-width: 1024px) {  
   .ceo, .donate-home {
     flex-direction: row;
+  }
+
+  .team .staff{
+    margin-left: 0;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 1 / 3 / 2 / 4; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 3 / 1 / 4 / 2; }
+    .div6 { grid-area: 3 / 2 / 4 / 3; }
+    .div7 { grid-area: 3 / 3 / 4 / 4; }
+  }
+  
+  .staff .hover-text h5{
+     font-size: 0.6em;
+  }
+  .staff .hover-text h6{
+     font-size: 0.5em;
+  }
+
+  .team h4, .about-mission .left-top p, .ceo p {
+    width: 80%;
+    font-size: 0.8em;
   }  
+
+  .about-mission h2{ 
+    width: 80%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -961,50 +991,6 @@ p {
 }
 
 /* ABOUT PAGE ENDS */
-
-/*DONATE PAGE*/
-.sponsors{
-  padding-top: 5%;
-  padding-bottom: 5%;
-  margin-bottom: 0.3%;
-  flex-direction: column;
-  background-color: #027593;
-}
-
-.donate-page p{
-  width: 60%;
-}
-
-.donate-page .left-top{
-  padding-left: 10%;
-}
-
-.sponsors .photo-slider{
-  height: 300px;
-}
-
-.sponsors h2 {
-  color: white;
-}
-
-@media (max-width: 1024px) {
- .donate-page .left-top{
-    padding-top: 10%;
-  }
- .donate-page .right-bottom{
-    height: 50%;
-    width: 100%;
-    display: flex; 
-    align-items: center;  
-    justify-content: center;  
-    overflow: hidden;  
-  }
- .donate-page .right-bottom img{
-    height: 100%;
-    object-fit: cover; 
-  }
-}
-/*DONATE PAGE ENDS*/
 /*VOLUNTEER PAGE*/
 .second .slide-track{
   animation: scroll-right 40s linear infinite;
@@ -1019,11 +1005,20 @@ p {
 }
 
 .volunteer-home p{
-  width: 60%;
+  width: 50%;
+  margin-bottom: 39.36px;
 }
 
 .volunteer-home .photo-slider{
-  height: 25%;
+  height: 14em;
+}
+
+.volunteer-home h1{
+  margin-top: 39.36px;
+}
+
+.volunteer-home .second{
+  margin-top: 39.36px;
 }
 
 .volunteer-home .slide:hover img{
@@ -1033,10 +1028,7 @@ p {
 .impact-volunteer {
   margin-top: 7%;
   margin-bottom: 7%;
-  
-  .right-bottom{
-    flex-direction: column;
-    align-items: start;
+  flex-direction: column;
 
     a {
      background-color: transparent;
@@ -1047,24 +1039,207 @@ p {
 
     ul, li{ 
       display: flex;
-      justify-content: start;
+      justify-content: center;
       align-items: center;
+      width: 60%;
+      height: auto;
+      padding: 0;
     }
 
      li{ 
       flex-direction: column;
-      width: 30%;
-      background-color: blue;
     }
-  }
 
   p{
     width: 60%;
   } 
+ 
+  h4, h5 {
+    color: #535353;
+  }
+
+  h5{
+    font-weight: normal;
+    font-size: 1em;
+  }  
+
+  h3 {
+    font-size: 2em;
+    margin:0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .volunteer-home p{
+    width: 80%;
+  }
+
+  .volunteer-home a{
+    font-size: 0.8em;
+    margin-bottom: 39.36px;
+  }
+}
+@media (max-width: 768px) {
+  .volunteer-home .photo-slider{
+    height: 12em;
+  }
+  .volunteer-home .slide{
+    height: 100px;
+    width: 150px;
+  }
+
+  .impact-volunteer ul{ 
+      flex-direction: column;
+      height: auto;
+   }
+  
+   .impact-volunteer li, .impact-volunteer p {
+     width: 80%;
+   }
+   
+   h5{
+     width: 60%;
+   }  
+  
+   .impact-volunteer a {
+     font-size: 1em;
+   }
+   
+   .impact-volunteer li{  
+     padding-bottom: 10px;
+     border-bottom: 0.5px solid rgb(2,117,147, 0.5);
+   }
+   
 }
 
 
 /*VOLUNTEER PAGE ENDS*/
+
+
+/*PROJECTS PAGE*/
+.project-home{
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  .next-to-each-other{ 
+    justify-content: center;
+    gap: 1em;
+    margin-top: 3em;
+  }
+
+  p{ 
+    width: 60%;
+  }
+}
+.wheelchair{
+  .photo img{
+    object-fit: contain;
+    width: 100%;
+  }
+
+  .right-bottom{ 
+    margin-left: 60px;
+  
+    p{
+      width: 80%;
+    }
+    
+    .underline-animation{
+      display: flex;
+      width: 10em;
+      svg {
+        object-fit: contain;
+      }
+    }
+  }
+
+  a{ 
+    background-color: transparent;
+     padding: 0;
+     box-shadow: none;
+     height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .project-home{
+    margin-top: 20%; 
+    
+    a{
+      font-size: 0.7em;
+    }
+  }
+
+}
+
+/*PROJECTS PAGE ENDS*/
+/*DONATE PAGE*/
+.sponsors{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  flex-direction: column;
+  background-color: #027593;
+}
+
+.sponsors .photo-slider{
+  height: 300px;
+}
+
+.sponsors h2 {
+  color: white;
+}
+
+.donate-info {
+  .right-bottom {
+    background-color: rgb(2,117,147, 0.5);
+
+    a {
+     background-color: transparent;
+     padding: 0;
+     box-shadow: none;
+     height: auto;
+     flex-direction: column;
+    }
+
+    .full-height{
+      height: 100%; width: 100%;
+      display: flex; 
+      align-items: center;  
+      justify-content: center;  
+    }
+
+    .underline-animation {
+      color: white;
+    }
+
+    .underline-animation::after {
+      color: white;
+      background-color: white;
+    }
+
+    div::before{ 
+      background-color: rgb(253, 54, 40, 0.7);
+    }
+  }
+}
+
+.amazon{ 
+  .left-top{
+    width: 39.7vw;
+
+    img{ 
+     width: 100%;
+    }
+  }
+  
+}
+
+@media (max-width: 1024px) {
+
+}
+/*DONATE PAGE ENDS*/
 
 @keyframes slide-right {
   0%{
