--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -148,3 +148,15 @@
     margin-left: 0.25em;
   }
 }
+
+@media (max-width: 355px){
+  .footer #address{
+    white-space: normal;
+  }
+}
+
+@media (max-width: 220px){
+  .footer .logo{
+    height: 4.5em;
+  }
+}
